<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.gallery.GalleryFragment">

        <TableRow
            android:layout_width="match_parent"
            android:background="#2e2c2c"
            android:layout_height="match_parent" >
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <AutoCompleteTextView
                android:id="@+id/brandActv"
                android:layout_width="0sp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:hint="@string/brands"
                android:textColor="#a39d9d" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <AutoCompleteTextView
                android:id="@+id/yearActv"
                android:layout_width="0sp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:clickable="true"
                android:focusable="true"
                android:hint="@string/generation"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <AutoCompleteTextView
                android:id="@+id/modelActv"
                android:layout_width="0sp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:clickable="true"
                android:focusable="true"
                android:hint="@string/models"/>
        </TableRow>

        <!--<TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/testedTV"
                android:layout_width="0sp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/vvodTextView"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnBrandSelection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ButText" />
        </TableRow>-->
    </TableLayout>